--- a/public/404.html
+++ b/public/404.html
@@ -55,13 +55,15 @@
 </head>
 
 <body>
+
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <div>
+    <img src="/images/404.jpg" width="500px">
+ <!--    <div>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
-  </div>
+  </div> -->
 </body>
 </html>
